--- a/css/kapaseety.css
+++ b/css/kapaseety.css
@@ -9,9 +9,13 @@ body {
 	margin-top:5px;
 }
 
+.page-title {
+    margin: 40px 0 0;
+}
+
 .page-subtitle {
    border-bottom : 1px solid #eee;
-   padding-bottom:9px;
+   padding-bottom: 9px;
 }
 
 
@@ -233,32 +237,7 @@ body {
     height: 100%;
 }
 
-table.dataTable thead .sorting,
-table.dataTable thead .sorting_asc,
-table.dataTable thead .sorting_desc,
-table.dataTable thead .sorting_asc_disabled,
-table.dataTable thead .sorting_desc_disabled {
-    background: 0 0;
-}
 
-table.dataTable thead .sorting_asc:after {
-    content: "\f0de";
-    float: right;
-    font-family: fontawesome;
-}
-
-table.dataTable thead .sorting_desc:after {
-    content: "\f0dd";
-    float: right;
-    font-family: fontawesome;
-}
-
-table.dataTable thead .sorting:after {
-    content: "\f0dc";
-    float: right;
-    font-family: fontawesome;
-    color: rgba(50,50,50,.5);
-}
 
 .btn-circle {
     width: 30px;
